Add logo and some text, supposedly.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello, Web</h1>
+<center>
+<img src="logo.png"/>
+<h1>Hello, Web!</h1>
 <p>Page setup in progress.</p>
+<p>Find us on <a href="https://x.com/DomAntGames">X/Twitter</a>.
+<p>Domesticated Ant Games Ltd. 2024 - All Rights Reserved.
+</center>
 </body>
 </html>
