Add a favicon and disclaimers, presumably.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>Domesticated Ant Games Ltd.</title>
+  <link rel="icon" type="image/x-icon" href="files/favicon.ico">
+</head>
 <body>
 <center>
-<img src="logo.png"/>
+<img src="files/logo.png"/>
 <h1>Hello, Web!</h1>
 <p>Page setup in progress.</p>
 <p>Find us on <a href="https://x.com/DomAntGames">X/Twitter</a>.
-<p>Domesticated Ant Games Ltd. 2024 - All Rights Reserved.
+<br/>
+<br/>
+<p>Domesticated Ant Games Ltd. 2024 - All Rights Reserved.<br/><small>Web design is not our passion.</small>
 </center>
 </body>
 </html>
