Test separate page for a game, possibly.

--- a/gc.html
+++ b/gc.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Domesticated Ant Games Ltd.</title>
+  <title>Gravity Circuit</title>
   <link rel="icon" type="image/x-icon" href="files/favicon.ico">
 </head>
 <body>
 <center>
-<img src="files/logo.png"/>
-<h1>Hello, Web!</h1>
-<p>Page setup in progress.<br/><a href="gc.html">Here be a link to GC</a>.</p>
-<p>Find us on <a href="https://x.com/DomAntGames">X/Twitter</a>.
+<h1>Page about a game?</h1>
+<p>Page setup in progress.<br/>Yes.</p>
+<p>Find Gravity Circuit on <a href="https://x.com/GravityCircuit">X/Twitter</a>.
 <br/>
 <br/>
 <p>Domesticated Ant Games Ltd. 2024 - All Rights Reserved.<br/><small>Web design is not our passion.</small>
