Add a rudimentary style sheet, add some fonts courtesy of Google, seemingly.

--- a/gc.html
+++ b/gc.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="style.css" type="text/css" />
   <title>Gravity Circuit</title>
   <link rel="icon" type="image/x-icon" href="files/favicon.ico">
 </head>
@@ -11,7 +12,7 @@
 <p>Find Gravity Circuit on <a href="https://x.com/GravityCircuit">X/Twitter</a>.
 <br/>
 <br/>
-<p>Domesticated Ant Games Ltd. 2024 - All Rights Reserved.<br/><small>Web design is not our passion.</small>
+<p>© 2024 Domesticated Ant Games Ltd.<br/><small>Web design is not our passion.</small>
 </center>
 </body>
 </html>
