--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="style.css" type="text/css" />
   <title>Domesticated Ant Games Ltd.</title>
   <link rel="icon" type="image/x-icon" href="files/favicon.ico">
 </head>
@@ -12,7 +13,7 @@
 <p>Find us on <a href="https://x.com/DomAntGames">X/Twitter</a>.
 <br/>
 <br/>
-<p>Domesticated Ant Games Ltd. 2024 - All Rights Reserved.<br/><small>Web design is not our passion.</small>
+<p>© 2024 Domesticated Ant Games Ltd.<br/><small>Web design is not our passion.</small>
 </center>
 </body>
 </html>
