More proper style sheet, all pages defined in rough form, smaller logo, some unfunny comments, doubtfully.

--- a/gc.html
+++ b/gc.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
 <html>
+<!--Who gave us the permission to make a website, when we know nothing about web dev?-->
+<!--Dunno. Sorry you have to see this.-->
 <head>
   <link rel="stylesheet" href="style.css" type="text/css" />
-  <title>Gravity Circuit</title>
+  <title>Contact Information</title>
   <link rel="icon" type="image/x-icon" href="files/favicon.ico">
 </head>
 <body>
-<center>
-<h1>Page about a game?</h1>
-<p>Page setup in progress.<br/>Yes.</p>
-<p>Find Gravity Circuit on <a href="https://x.com/GravityCircuit">X/Twitter</a>.
-<br/>
-<br/>
-<p>© 2024 Domesticated Ant Games Ltd.<br/><small>Web design is not our passion.</small>
-</center>
+
+<div class="logo">
+	<img src="files/logo.png"/>
+</div>
+
+<!--Navigation bar up top, hope someone doesn't get lost.-->
+<div class="navigation">
+	<ul>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="gc.html">Gravity Circuit</a></li>
+	<li><a href="contact.html">Contact</a></li>
+	<li><a href="legal.html">Legal</a></li>
+	</ul>
+</div>
+
+<!--Page content, oh no.-->
+<div class="content">
+	<h1>Page about a game?</h1>
+	<p>Page setup in progress.<br/>Yes.</p>
+	<p>Find Gravity Circuit on <a href="https://x.com/GravityCircuit">X/Twitter</a>.
+</div>
+
+
+<!--Page footer. Finally, it's over.-->
+<div class="footer">
+	<p>© 2024 Domesticated Ant Games Ltd.
+	<br/>
+	<!--No, this isn't funny enough to enable javascript for.-->
+	<script type="text/javascript" language="Javascript" src="notfunny.js"></script>
+</div>
 </body>
 </html>
