--- a/legal.html
+++ b/legal.html
@@ -4,7 +4,7 @@
 <!--Dunno. Sorry you have to see this.-->
 <head>
   <link rel="stylesheet" href="style.css" type="text/css" />
-  <title>Domesticated Ant Games Ltd.</title>
+  <title>Legal Information</title>
   <link rel="icon" type="image/x-icon" href="files/favicon.ico">
 </head>
 <body>
@@ -24,14 +24,19 @@
 </div>
 
 <!--Page content, oh no.-->
-<div class="content">
-	<h1>Hello, Web!</h1>
-	<p>Site building in progress.<br/>
-	<p>Find us on <a href="https://x.com/DomAntGames">X/Twitter</a>.
-	<br/>
-	<br/>
+<div class="legal">
+	<div class="legal-segment">
+		<h1>Company information</h1>
+		Domesticated Ant Games Ltd. is a registered company, operating from Finland.<br/>
+		This website may contain content or materials from the company's business partners.<br/>
+		
+	</div>
+	<div class="legal-segment">
+		<h1>Privacy Policy</h1>
+		Domain is provided by <a href="https://www.namecheap.com/">Namecheap</a> and file hosting is provided by <a href="https://github.com/">Github</a> (via <a href="https://pages.github.com/">Github Pages</a>).<br/><br/>
+		This website and its contents do not track or collect user information, so any tracking that may occur is a result of above services' operations. Refer to said services' Privacy Policies for further information.<br/>
+	</div>
 </div>
-
 <!--Page footer. Finally, it's over.-->
 <div class="footer">
 	<p>© 2024 Domesticated Ant Games Ltd.
