--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <!--Dunno. Sorry you have to see this.-->
 <head>
   <link rel="stylesheet" href="style.css" type="text/css" />
-  <title>Domesticated Ant Games Ltd.</title>
+  <title>Contact Information</title>
   <link rel="icon" type="image/x-icon" href="files/favicon.ico">
 </head>
 <body>
@@ -24,13 +24,21 @@
 </div>
 
 <!--Page content, oh no.-->
-<div class="content">
-	<h1>Hello, Web!</h1>
-	<p>Site building in progress.<br/>
-	<p>Find us on <a href="https://x.com/DomAntGames">X/Twitter</a>.
-	<br/>
-	<br/>
+<div class="legal">
+	<div class="legal-segment">
+		<h1>Email</h1>
+		Feel free to send us feedback or inquiries, if you have any:<br/>
+		<b>DomesticatedAntGames ( at ) gmail ( dot ) com</b><br/>
+	</div>
+	<div class="legal-segment">
+		<h1>Social Media</h1>
+		You can find us on the following websites:<br/>
+		<p>• <a href="https://x.com/DomAntGames">X/Twitter</a>
+		<p>• More to come...?
+		
+	</div>
 </div>
+
 
 <!--Page footer. Finally, it's over.-->
 <div class="footer">
