You know, a single about page is better than two, potentially.

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <!--Dunno. Sorry you have to see this.-->
 <head>
   <link rel="stylesheet" href="style.css" type="text/css" />
-  <title>Legal Information</title>
+  <title>About Us</title>
   <link rel="icon" type="image/x-icon" href="files/favicon.ico">
 </head>
 <body>
@@ -17,27 +17,41 @@
 <div class="navigation">
 	<ul>
 	<li><a href="index.html">Home</a></li>
+	<li><b>•</b></li>
 	<li><a href="gc.html">Gravity Circuit</a></li>
-	<li><a href="contact.html">Contact</a></li>
-	<li><a href="legal.html">Legal</a></li>
+	<li><b>•</b></li>
+	<li><a href="about.html">About Us</a></li>
 	</ul>
 </div>
 
 <!--Page content, oh no.-->
-<div class="legal">
-	<div class="legal-segment">
+<div class="things">
+	<div class="things-segment">
 		<h1>Company information</h1>
-		Domesticated Ant Games Ltd. is a registered company, operating from Finland.<br/>
-		This website may contain content or materials from the company's business partners.<br/>
-		
+		Domesticated Ant Games Ltd. is registered in and operates from Finland.<br/>
+		Started in 2021, the company primarily develops entertainment software,<br/>
+		in collaboration with various freelancers and contractors.<br/>
 	</div>
-	<div class="legal-segment">
+	<div class="things-segment">
+		<h1>Email</h1>
+		Feel free to send us feedback or inquiries, if you have any:<br/>
+		<b>DomesticatedAntGames ( at ) gmail ( dot ) com</b><br/>
+	</div>
+	<div class="things-segment">
+		<h1>Social Media</h1>
+		You can find us on the following websites:
+		<p>• <a href="https://x.com/DomAntGames">X/Twitter</a>
+		<p>• More to come...?
+	</div>
+	<div class="things-segment">
 		<h1>Privacy Policy</h1>
 		Domain is provided by <a href="https://www.namecheap.com/">Namecheap</a> and file hosting is provided by <a href="https://github.com/">Github</a> (via <a href="https://pages.github.com/">Github Pages</a>).<br/><br/>
 		This website and its contents do not track or collect user information, so any tracking that may occur is a result of above services' operations. Refer to said services' Privacy Policies for further information.<br/>
 	</div>
 </div>
+
 <!--Page footer. Finally, it's over.-->
+<div class="paddington"></div>
 <div class="footer">
 	<p>© 2024 Domesticated Ant Games Ltd.
 	<br/>
