--- a/gc.html
+++ b/gc.html
@@ -17,9 +17,10 @@
 <div class="navigation">
 	<ul>
 	<li><a href="index.html">Home</a></li>
+	<li><b>•</b></li>
 	<li><a href="gc.html">Gravity Circuit</a></li>
-	<li><a href="contact.html">Contact</a></li>
-	<li><a href="legal.html">Legal</a></li>
+	<li><b>•</b></li>
+	<li><a href="about.html">About Us</a></li>
 	</ul>
 </div>
 
@@ -32,6 +33,7 @@
 
 
 <!--Page footer. Finally, it's over.-->
+<div class="paddington"></div>
 <div class="footer">
 	<p>© 2024 Domesticated Ant Games Ltd.
 	<br/>
