More boring things, amazingly.

--- a/404.html
+++ b/404.html
@@ -1,1 +1,25 @@
-Uh oh.
+<!DOCTYPE html>
+<!DOCTYPE html>
+<html>
+<!--Who gave us the permission to make a website, when we know nothing about web dev?-->
+<!--Dunno. Sorry you have to see this.-->
+<head>
+  <link rel="stylesheet" href="style.css" type="text/css" />
+  <title>404!</title>
+  <link rel="icon" type="image/x-icon" href="files/favicon.ico">
+</head>
+<body>
+
+<!--We have an error image?-->
+<div class="error-dump">
+	<img src="files/404.png"/>
+	<p>404. That means an error.<br/>
+	<a href="index.html">Go back home here.</a>
+	
+	<p>
+	<!--Don't bother enabling your javascript for this.-->
+	<script type="text/javascript" language="Javascript" src="stillnotfunny.js"></script>
+</div>
+
+</body>
+</html>
