--- a/about.html
+++ b/about.html
@@ -29,9 +29,7 @@
 <div class="things">
 	<div class="things-segment">
 		<h1>Company information</h1>
-		Domesticated Ant Games Ltd. is registered in and operates from Finland.<br/>
-		Started in 2021, the company primarily develops entertainment software,<br/>
-		in collaboration with various freelancers and contractors.<br/>
+		Domesticated Ant Games Ltd. is registered in and operates from Finland. Started in 2021, the company primarily develops entertainment software, in collaboration with various freelancers and contractors.
 	</div>
 	<div class="things-segment">
 		<h1>Email</h1>
