--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <div class="things">
 	<div class="things-segment">
 		<h1>Company information</h1>
-		Domesticated Ant Games Ltd. is registered in and operates from Finland. Started in 2021, the company primarily develops entertainment software, in collaboration with various freelancers and contractors.
+		Domesticated Ant Games Ltd. primarily develops entertainment software, in collaboration with various freelancers and contractors. The company has been in the business since 2021.
 	</div>
 	<div class="things-segment">
 		<h1>Email</h1>
@@ -45,7 +45,7 @@
 	<div class="things-segment">
 		<h1>Privacy Policy</h1>
 		Domain is provided by <a href="https://www.namecheap.com/">Namecheap</a> and file hosting is provided by <a href="https://github.com/">Github</a> (via <a href="https://pages.github.com/">Github Pages</a>).<br/><br/>
-		This website and its contents do not track or collect user information, so any tracking that may occur is a result of above services' operations. Refer to said services' Privacy Policies for further information.<br/>
+		This website and its own contents do not track or collect user information, so any tracking that may occur is a result of above services' operations, or from embedded content from other sites (like <a href="https://youtube.com">YouTube</a>). Refer to said services' Privacy Policies for further information.<br/>
 	</div>
 </div>
 
