Move files, for some reason.

--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 	
 	<p>
 	<!--Don't bother enabling your javascript for this.-->
-	<script type="text/javascript" language="Javascript" src="stillnotfunny.js"></script>
+	<script type="text/javascript" language="Javascript" src="js/stillnotfunny.js"></script>
 </div>
 
 </body>
