--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 	<p>© 2024 Domesticated Ant Games Ltd.
 	<br/>
 	<!--No, this isn't funny enough to enable javascript for.-->
-	<script type="text/javascript" language="Javascript" src="notfunny.js"></script>
+	<script type="text/javascript" language="Javascript" src="js/notfunny.js"></script>
 </div>
 </body>
 </html>
