Added storefront icons

--- a/gc.html
+++ b/gc.html
@@ -4,7 +4,7 @@
 <!--Dunno. Sorry you have to see this.-->
 <head>
   <link rel="stylesheet" href="style.css" type="text/css" />
-  <title>Contact Information</title>
+  <title>Gravity Circuit</title>
   <link rel="icon" type="image/x-icon" href="files/favicon.ico">
 </head>
 <body>
@@ -30,6 +30,17 @@
 	<h1>Page about a game?</h1>
 	<p>Page setup in progress.<br/>Yes.</p>
 	<p>Find Gravity Circuit on <a href="https://x.com/GravityCircuit">X/Twitter</a>.
+	
+	<div class="platform">
+		<img src="files/icons/steam.svg">
+		<img src="files/icons/gog.png">
+		<img src="files/icons/egs.svg">
+		<img src="files/icons/switch.svg">
+		<img src="files/icons/playstation.svg">
+	</div>
+
+	
+
 </div>
 
 
