Add bluesky to contact details for GC, for some reason.

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <div class="things">
 	<div class="things-segment">
 		<h1>Company information</h1>
-		Domesticated Ant Games Ltd. primarily develops entertainment software, in collaboration with various freelancers and contractors. The company has been in business since 2021.
+		Domesticated Ant Games Ltd. develops entertainment software, in collaboration with various freelancers and contractors. The company has been in business since 2021.
 	</div>
 	<div class="things-segment">
 		<h1>Email</h1>
@@ -39,7 +39,7 @@
 	<div class="things-segment">
 		<h1>Social Media</h1>
 		You can find us on the following websites:
-		<p>• <a href="https://x.com/DomAntGames">X/Twitter</a>
+		<p>• <a href="https://x.com/DomAntGames">Twitter/X</a>
 		<p>• <a href="https://DomAntGames.bsky.social">Bluesky</a>
 	</div>
 	<div class="things-segment">
