--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="content">
 	<h1>Hello, Web!</h1>
 	<p>Site building in progress.<br/>
-	<p>Find us on <a href="https://x.com/DomAntGames">Twitter/X</a> or <a href="https://DomAntGames.bsky.social">Bluesky</a>.
+	<p>Find us on <a href="https://x.com/DomAntGames">Twitter/X</a> or <a href="https://bsky.app/profile/domesticatedantgames.com">Bluesky</a>.
 	<br/>
 	<br/>
 </div>
