--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <div class="things">
 	<div class="things-segment">
 		<h1>Company information</h1>
-		Domesticated Ant Games Ltd. develops entertainment software, in collaboration with various freelancers and contractors. The company has been in business since 2021.
+		Domesticated Ant Games Ltd. develops entertainment software, in collaboration with various freelancers and contractors. The company was established in 2021.
 	</div>
 	<div class="things-segment">
 		<h1>Email</h1>
