--- a/gc.html
+++ b/gc.html
@@ -29,7 +29,7 @@
 <div class="content">
 	<h1>Page about a game?</h1>
 	<p>Page setup in progress.<br/>Yes.</p>
-	<p>Find Gravity Circuit on <a href="https://x.com/GravityCircuit">Twitter/X</a> or <a href="https://gravitycircuit.bsky.social">Bluesky</a>.
+	<p>Find Gravity Circuit on <a href="https://x.com/GravityCircuit">X</a> or <a href="https://gravitycircuit.bsky.social">Bluesky</a>.
 	
 	<div class="platform">
 		<img src="files/icons/steam.svg">
