--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 	<div class="things-segment">
 		<h1>Social Media</h1>
 		You can find us on the following websites:
-		<p>• <a href="https://x.com/DomAntGames">Twitter/X</a>
+		<p>• <a href="https://x.com/DomAntGames">X</a>
 		<p>• <a href="https://bsky.app/profile/domesticatedantgames.com">Bluesky</a>
 	</div>
 	<div class="things-segment">
