Increment copyright year.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!--Page footer. Finally, it's over.-->
 <div class="paddington"></div>
 <div class="footer">
-	<p>© 2024 Domesticated Ant Games Ltd.<br/>
+	<p>© 2024-2025 Domesticated Ant Games Ltd.<br/>
 	<small>All trademarks, logos and brand names are the property of their respective owners.</small></p>
 	<!--No, this isn't funny enough to enable javascript for.-->
 	<script type="text/javascript" language="Javascript" src="js/notfunny.js"></script>
